--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="titulo_botton">Titulo</string>
     <string name="subtitulo_botton">Subtitulo</string>
     <string name="schools">Escuelas</string>
-    <string name="common_areas">Areas comunes</string>
+    <string name="common_areas">Lugares de interes</string>
+    <string name="school">Escuela</string>
+    <string name="common_area">Lugar de interes</string>
 </resources>
